[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dusk"
version = "0.1.0"
description = "macOS disk usage tracker with trend analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
dusk = "dusk.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dusk"]
